@@ -46,8 +46,8 @@ INSERT INTO `tconfig` VALUES
 (5,'days_compact','15'),
 (6,'graph_res','5'),
 (7,'step_compact','1'),
-(8,'db_scheme_version','3.0-dev'),
-(9,'db_scheme_build','PD90918'),
+(8,'db_scheme_version','3.0'),
+(9,'db_scheme_build','PD91218'),
 (13,'show_unknown','0'),
 (14,'show_lastalerts','1'),
 (15,'style','pandora'),
